--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
@@ -15,23 +16,33 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ic_edit_location"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bengaluru"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            tools:text="Bengaluru" />
 
         <TextView
             android:id="@+id/updated_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20 April 2012, 20:08 PM"
-            android:textSize="14dp" />
+            android:textSize="14dp"
+            tools:text="20 April 2012, 20:08 PM" />
+
+        <TextView
+            android:id="@+id/add_to_fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Favourite"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
     </LinearLayout>
 
 
@@ -42,29 +53,36 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
+        android:weightSum="5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:weightSum="5">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/address_edit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:gravity="center"
             android:imeOptions="flagNoExtractUi"
-            android:orientation="vertical"
-            android:layout_weight="4"/>
+            android:orientation="vertical" />
 
         <ImageView
             android:id="@+id/ic_search"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_search"
             android:layout_gravity="end"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_search" />
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="addressContainer, searchContainer" />
 
     <ImageView
         android:id="@+id/ic_edit_location"
@@ -72,9 +90,20 @@
         android:layout_height="50dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_edit_location"
-        app:layout_constraintBottom_toBottomOf="@+id/addressContainer"
+        app:layout_constraintBottom_toBottomOf="@+id/barrier"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/addressContainer" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favourite_place_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/black_50"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/barrier"
+        tools:listitem="@layout/fav_list_item" />
 
     <ImageView
         android:id="@+id/ic_weather"
@@ -82,11 +111,22 @@
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
         android:scaleType="fitXY"
-        android:src="@drawable/pressure"
         app:layout_constraintBottom_toTopOf="@id/overviewContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addressContainer" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading_animation"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        app:layout_constraintBottom_toTopOf="@id/overviewContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addressContainer"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_animation" />
 
     <LinearLayout
         android:id="@+id/overviewContainer"
@@ -104,25 +144,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Clear Sky"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            tools:text="Clear Sky" />
 
         <TextView
             android:id="@+id/temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="sans-serif-thin"
-            android:text="29°C"
-            android:textSize="90dp" />
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="90dp"
+            tools:text="29°C" />
 
         <TextView
             android:id="@+id/feels_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Feels like 23°C"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            tools:text="Feels like 23°C" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -135,8 +175,8 @@
                 android:id="@+id/temp_min"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Min Temp: 05:05 AM"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Min Temp: 05:05 AM" />
 
             <Space
                 android:layout_width="50dp"
@@ -146,8 +186,8 @@
                 android:id="@+id/temp_max"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Max Temp: 05:05 PM"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Max Temp: 05:05 PM" />
         </LinearLayout>
 
     </LinearLayout>
@@ -197,8 +237,8 @@
                     android:id="@+id/sunrise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="06:40 AM"
-                    android:textSize="14dp" />
+                    android:textSize="14dp"
+                    tools:text="06:40 AM" />
             </LinearLayout>
 
             <Space
@@ -234,8 +274,8 @@
                     android:id="@+id/sunset"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="06:40 AM"
-                    android:textSize="14dp" />
+                    android:textSize="14dp"
+                    tools:text="06:40 AM" />
             </LinearLayout>
 
             <Space
@@ -271,8 +311,8 @@
                     android:id="@+id/wind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="06:40 AM"
-                    android:textSize="14dp" />
+                    android:textSize="14dp"
+                    tools:text="06:40 AM" />
             </LinearLayout>
         </LinearLayout>
 
@@ -315,8 +355,8 @@
                     android:id="@+id/pressure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="06:40 AM"
-                    android:textSize="14dp" />
+                    android:textSize="14dp"
+                    tools:text="06:40 AM" />
             </LinearLayout>
 
             <Space
@@ -352,8 +392,8 @@
                     android:id="@+id/humidity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="06:40 AM"
-                    android:textSize="14dp" />
+                    android:textSize="14dp"
+                    tools:text="06:40 AM" />
             </LinearLayout>
 
             <Space
@@ -394,29 +434,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-
-    <ProgressBar
-        android:id="@+id/loader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!--<TextView
-        android:id="@+id/errorText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Something went wrong"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loader" />-->
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
